--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
   },
   "homepage": "https://github.com/truongsinh/tran-nguyen.pro#readme",
   "devDependencies": {
-    "jspm": "^0.16.48"
+    "jspm": "^0.16.48",
+    "typescript": "^2.1.1"
+  },
+  "dependencies": {
+    "@types/react": "^0.14.50",
+    "@types/react-dom": "^0.14.19",
+    "@types/systemjs": "^0.19.31"
   },
   "jspm": {
+    "configFile": "jspm-config.js",
     "dependencies": {
       "react": "npm:react@^15.4.0",
       "react-dom": "npm:react-dom@^15.4.0"
     },
-    "devDependencies": {
-      "typescript": "npm:typescript@^2.0.7"
-    }
-  },
-  "dependencies": {
-    "@types/react": "^0.14.50",
-    "@types/react-dom": "^0.14.19"
+    "devDependencies": {}
   }
 }
