--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,20 +18,18 @@
   },
   "homepage": "https://github.com/truongsinh/tran-nguyen.pro#readme",
   "devDependencies": {
-    "jspm": "^0.16.48",
-    "typescript": "^2.1.1"
-  },
-  "dependencies": {
     "@types/react": "^0.14.50",
     "@types/react-dom": "^0.14.19",
-    "@types/systemjs": "^0.19.31"
+    "awesome-typescript-loader": "^3.0.0-beta.3",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "source-map-loader": "^0.1.5",
+    "ts-loader": "^1.2.2",
+    "typescript": "^2.1.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
-  "jspm": {
-    "configFile": "jspm-config.js",
-    "dependencies": {
-      "react": "npm:react@^15.4.0",
-      "react-dom": "npm:react-dom@^15.4.0"
-    },
-    "devDependencies": {}
+  "dependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   }
 }
