--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "noEmit": false,
-        "noEmitHelpers": false,
+        "noEmitHelpers": true,
+        "importHelpers": true,
         "noEmitOnError": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
@@ -30,11 +31,12 @@
         "noImplicitUseStrict": false,
         "noLib": false,
         "noResolve": false,
-        "noUnusedLocals": false,
+        "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./build",
         "reactNamespace": "React",
         "preserveConstEnums": true,
+        "pretty": true,
         "removeComments": true,
         "sourceMap": true,
         "strictNullChecks": true,
