--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --inline",
+    "lint": "tslint src/**/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,11 +21,15 @@
   "devDependencies": {
     "@types/react": "0.14.50",
     "@types/react-dom": "0.14.19",
+    "await-loader": "0.0.2",
     "awesome-typescript-loader": "3.0.0-beta.3",
     "enhanced-resolve": "^2.3.0",
     "react-hot-loader": "3.0.0-beta.6",
     "source-map-loader": "0.1.5",
     "ts-loader": "1.2.2",
+    "tslib": "^1.1.0",
+    "tslint": "^4.0.2",
+    "tslint-loader": "^3.2.0",
     "typescript": "2.1.1",
     "webpack": " 1.13.3",
     "webpack-dev-server": "1.16.2"
